--- a/.github/workflows/first-action.yaml
+++ b/.github/workflows/first-action.yaml
@@ -17,7 +17,7 @@ jobs:
       uses: aws-actions/configure-aws-credentials@v1
       with: 
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} s3
-        aws-secret-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
 
     - name: Deploy static site on S3 bucket
